@@ -42,9 +42,13 @@ namespace GraphX.Controls
         #region Properties & Fields
 
         /// <summary>
-        /// Gets or sets if edge pointer should be hidden when source and target vertices are overlapped making the 0 length edge 
+        /// Gets or sets if edge pointer should be hidden when source and target vertices are overlapped making the 0 length edge. Default value is True.
         /// </summary>
         public bool HideEdgePointerOnVertexOverlap { get; set; } = true;
+        /// <summary>
+        /// Gets or sets the length of the edge to hide the edge pointers if less than or equal to. Default value is 0 (do not hide).
+        /// </summary>
+        public double HideEdgePointerByEdgeLength { get; set; } = 0.0d;
 
         public abstract bool IsSelfLooped { get; protected set; }
         public abstract void Dispose();
@@ -831,10 +835,27 @@ namespace GraphX.Controls
             }
             else // no route defined
             {
+                bool remainHidden = false;
+                //check for hide only if prop is not 0
+                if (HideEdgePointerByEdgeLength != 0d)
+                {
+                    if (MathHelper.GetDistanceBetweenPoints(p1, p2) <= HideEdgePointerByEdgeLength)
+                    {
+                        EdgePointerForSource?.Hide();
+                        EdgePointerForTarget?.Hide();
+                        remainHidden = true;
+                    }
+                    else
+                    {
+                        EdgePointerForSource?.Show();
+                        EdgePointerForTarget?.Show();
+                    }
+                }
+
                 if (hasEpSource) 
-                    p1 = p1.Subtract(UpdateSourceEpData(p1, p2));
+                    p1 = p1.Subtract(UpdateSourceEpData(p1, p2, remainHidden));
                 if (hasEpTarget)
-                    p2 = p2.Subtract(UpdateTargetEpData(p2, p1));
+                    p2 = p2.Subtract(UpdateTargetEpData(p2, p1, remainHidden));
 
                 lineFigure = new PathFigure { StartPoint = gEdge.ReversePath ? p2 : p1, Segments = new PathSegmentCollection { new LineSegment() { Point = gEdge.ReversePath ? p1 : p2 } }, IsClosed = false };            
             }
@@ -847,7 +868,7 @@ namespace GraphX.Controls
                 EdgeLabelControl.UpdatePosition();
         }
 
-        private Point UpdateSourceEpData(Point from, Point to)
+        private Point UpdateSourceEpData(Point from, Point to, bool remainHidden = false)
         {
             var dir = MathHelper.GetDirection(from, to);
             if (from == to)
@@ -855,12 +876,12 @@ namespace GraphX.Controls
                 if (HideEdgePointerOnVertexOverlap) EdgePointerForSource.Hide();
                 else dir = new Vector(0, 0);
             }
-            else EdgePointerForSource.Show();
+            else if(!remainHidden) EdgePointerForSource.Show();
             var result = EdgePointerForSource.Update(from, dir, EdgePointerForSource.NeedRotation ? -MathHelper.GetAngleBetweenPoints(from, to).ToDegrees() : 0);
             return EdgePointerForSource.Visibility == Visibility.Visible ? result : new Point();
         }
 
-        private Point UpdateTargetEpData(Point from, Point to)
+        private Point UpdateTargetEpData(Point from, Point to, bool remainHidden = false)
         {
             var dir = MathHelper.GetDirection(from, to);
             if (from == to)
@@ -868,7 +889,7 @@ namespace GraphX.Controls
                 if (HideEdgePointerOnVertexOverlap) EdgePointerForTarget.Hide();
                 else dir = new Vector(0, 0);
             }
-            else EdgePointerForTarget.Show();
+            else if (!remainHidden) EdgePointerForTarget.Show();
             var result =  EdgePointerForTarget.Update(from, dir, EdgePointerForTarget.NeedRotation ? (-MathHelper.GetAngleBetweenPoints(from, to).ToDegrees()) : 0);
             return EdgePointerForTarget.Visibility == Visibility.Visible ? result : new Point();
         }
